sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:62: error: not found: value nbBases
  var col0=getCouleurJoueur((b+1)%nbBases,0)
                                  ^SelectBaseball:63: error: not found: value nbBases
  var col1=getCouleurJoueur((b+1)%nbBases,1)
                                  ^